--- a/utilities-py/DeviceHiveRESTAPI.ipynb
+++ b/utilities-py/DeviceHiveRESTAPI.ipynb
@@ -2,12 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
+    "\n",
+    "'''\n",
+    "# a half of year age of refresh timeout, 30min of access token.\n",
+    "jwt.refresh-token-max-age=15724800000\n",
+    "jwt.access-token-max-age=1800000\n",
+    "\n",
+    "'''\n",
     "\n",
     "url = \"http://localhost:80/auth/rest/token\"\n",
     "\n",
@@ -21,12 +28,43 @@
     "\n",
     "response = requests.request(\"POST\", url, headers=headers, data=payload)\n",
     "\n",
-    "accessToken = json.loads(response.text)['accessToken']\n"
+    "accessToken = json.loads(response.text)['accessToken']\n",
+    "refreshToken = json.loads(response.text)['refreshToken']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlsyLDMsNCw1LDYsNyw4LDksMTAsMTEsMTUsMTYsMTcsMTldLCJlIjoxNjk4MDQ4MDYwNzY5LCJ0IjoxLCJ1Ijo0LCJuIjpbIjEiLCIyIl0sImR0IjpbIioiXSwiY3AiOlsiKiJdfX0.r7hVtpPKQ_q9upmKnh0JawUfEN6hDh_V29cp2-cf3dU'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "in case of access token expired\n",
+    "'''\n",
+    "refreshUrl = 'http://localhost:80/auth/rest/token/refresh'\n",
+    "payload = json.dumps({\"refreshToken\": refreshToken})\n",
+    "headers = {\n",
+    "  'Content-Type': 'application/json'\n",
+    "}\n",
+    "response = requests.request(\"POST\", refreshUrl, headers=headers, data=payload)\n",
+    "accessToken = json.loads(response.text)['accessToken']\n",
+    "accessToken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +77,7 @@
        " {'id': 3, 'name': 'CP3', 'description': 'string'}]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,13 +96,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 'dHsgbYbjyoWOyy9LUbpEtnxss4AHw0YH2DtG',\n",
+       "[{'id': 'e50d6085-2aba-48e9-b1c3-73c673e414be',\n",
+       "  'name': 'Sample Device',\n",
+       "  'data': None,\n",
+       "  'networkId': 1,\n",
+       "  'deviceTypeId': 1,\n",
+       "  'icomponentId': 1,\n",
+       "  'isBlocked': False},\n",
+       " {'id': 'FnmYwn8ruw5BqrTZki14k0Sx2vxrwwQPNNSx',\n",
+       "  'name': 'DEV2',\n",
+       "  'data': {'jsonString': 'string'},\n",
+       "  'networkId': 1,\n",
+       "  'deviceTypeId': 2,\n",
+       "  'icomponentId': 2,\n",
+       "  'isBlocked': False},\n",
+       " {'id': 'dHsgbYbjyoWOyy9LUbpEtnxss4AHw0YH2DtG',\n",
        "  'name': 'DEV3',\n",
        "  'data': None,\n",
        "  'networkId': 2,\n",
@@ -73,7 +125,7 @@
        "  'isBlocked': False}]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,25 +136,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'networks': [{'id': 2, 'name': 'NET2', 'description': None}],\n",
+       "{'networks': [{'id': 1,\n",
+       "   'name': 'Sample Network',\n",
+       "   'description': 'A DeviceHive Sample Network'},\n",
+       "  {'id': 2, 'name': 'NET2', 'description': None}],\n",
        " 'id': 4,\n",
        " 'login': 'dhuser01',\n",
        " 'role': 1,\n",
        " 'status': 0,\n",
-       " 'lastLogin': '2023-10-22T23:48:28.733',\n",
+       " 'lastLogin': '2023-10-23T07:20:12.761',\n",
        " 'data': None,\n",
        " 'introReviewed': False,\n",
        " 'allDeviceTypesAvailable': True,\n",
        " 'allIcomponentsAvailable': True}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +200,7 @@
        "  'description': 'Default DeviceHive device type'}]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,6 +208,20 @@
    "source": [
     "json.loads(ListDeviceTypes.text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
