--- a/devicehive-java-server-3.5.0-Latest/devicehive-plugin/src/main/resources/messages.properties
+++ b/devicehive-java-server-3.5.0-Latest/devicehive-plugin/src/main/resources/messages.properties
@@ -33,8 +33,8 @@ CONFIGURATION_NAME_REQUIRED=Configuration name is wrong or empty
 DEVICE_NOT_FOUND=Device with such deviceId = %s not found
 NETWORK_NOT_FOUND=Network with id = %s not found
 NETWORKS_NOT_FOUND=Networks with such networkIds wasn't found: {%s}
-DEVICE_TYPE_NOT_FOUND=Device type with id = %s not found
-DEVICE_TYPES_NOT_FOUND=Device types with such deviceTypeIds wasn't found: {%s}
+IEXPERIMENT_NOT_FOUND=Iexperiment with id = %s not found
+IEXPERIMENTS_NOT_FOUND=Iexperiments with such iexperimentIds wasn't found: {%s}
 ICOMPONENT_NOT_FOUND=Icomponent with id = %s not found
 ICOMPONENTS_NOT_FOUND=Icomponents with such icomponentIds wasn't found: {%s}
 COMMAND_NOT_FOUND=Command with id = %s not found
@@ -64,7 +64,7 @@ CLIENT_ID_IS_REQUIRED=Client id is required!
 INVALID_GRANT_TYPE=Invalid grant type!
 CAN_NOT_GET_CURRENT_USER=Can not get current user.
 USER_NETWORK_NOT_FOUND=Network with id %s for user with id %s was not found
-USER_DEVICE_TYPE_NOT_FOUND=Device type with id %s for user with id %s not found
+USER_IEXPERIMENT_NOT_FOUND=Iexperiment with id %s for user with id %s not found
 USER_ICOMPONENT_NOT_FOUND=Icomponent with id %s for user with id %s not found
 LABEL_IS_REQUIRED=Label is required!
 ACTIONS_ARE_REQUIRED=Actions are required!
@@ -108,16 +108,16 @@ INVALID_NETWORK_KEY=Incorrect network key value
 NO_ACCESS_TO_NETWORK=No access to network!
 NETWORK_CREATION_NOT_ALLOWED=No permissions to create network!
 NETWORK_DELETION_NOT_ALLOWED=There are the following devices within this network: %s. Please review and delete them first.
-DEVICE_TYPE_REQUIRED=Device type is required
-DEVICE_TYPE_ID_REQUIRED=Device type id is wrong or empty
-DUPLICATE_DEVICE_TYPE=Device type cannot be created. Device type with such name already exists
-NO_ACCESS_TO_DEVICE_TYPE=No access to device type!
-DEVICE_TYPE_CREATION_NOT_ALLOWED=No permissions to create device type!
-DEVICE_TYPE_DELETION_NOT_ALLOWED=There are the following devices within this device type: %s. Please review and delete them first.
-DEVICE_TYPE_ASSIGNMENT_NOT_ALLOWED=Cannot assign device type to user with all device types allowed
+IEXPERIMENT_REQUIRED=Iexperiment is required
+IEXPERIMENT_ID_REQUIRED=Iexperiment id is wrong or empty
+DUPLICATE_IEXPERIMENT=Iexperiment cannot be created. Iexperiment with such name already exists
+NO_ACCESS_TO_IEXPERIMENT=No access to iexperiment!
+IEXPERIMENT_CREATION_NOT_ALLOWED=No permissions to create iexperiment!
+IEXPERIMENT_DELETION_NOT_ALLOWED=There are the following devices within this iexperiment: %s. Please review and delete them first.
+IEXPERIMENT_ASSIGNMENT_NOT_ALLOWED=Cannot assign iexperiment to user with all iexperiments allowed
 ICOMPONENT_REQUIRED=Icomponent is required
 ICOMPONENT_ID_REQUIRED=Icomponent id is wrong or empty
-DUPLICATE_ICOMPONENT=Icomponent cannot be created. Device type with such name already exists
+DUPLICATE_ICOMPONENT=Icomponent cannot be created. Iexperiment with such name already exists
 NO_ACCESS_TO_ICOMPONENT=No access to icomponent!
 ICOMPONENT_CREATION_NOT_ALLOWED=No permissions to create icomponent!
 ICOMPONENT_DELETION_NOT_ALLOWED=There are the following devices within this icomponent: %s. Please review and delete them first.
@@ -131,7 +131,7 @@ FIELD_LENGTH_CONSTRAINT=Field cannot be empty. The length of %s should not be mo
 PING_ERROR=Error sending websocket ping
 SHUTDOWN=Shutdown
 NO_ACCESS_TO_DEVICE=No access to device
-NO_ACCESS_TO_DEVICE_TYPES_OR_NETWORKS_OR_ICOMPONENTS=No access to any device type or network or icomponent
+NO_ACCESS_TO_IEXPERIMENTS_OR_NETWORKS_OR_ICOMPONENTS=No access to any iexperiment or network or icomponent
 NO_NETWORKS_ASSIGNED_TO_USER=User has no networks assigned to him
 CANT_DELETE_CURRENT_USER_KEY=You can not delete a user or access key that you use to authenticate this request
 CANT_DELETE_LAST_DEFAULT_ACCESS_KEY=You can not delete your last default access key
