--- a/utilities-py/DeviceHiveRESTAPI.ipynb
+++ b/utilities-py/DeviceHiveRESTAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,16 +34,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlsyLDMsNCw1LDYsNyw4LDksMTAsMTEsMTUsMTYsMTcsMTldLCJlIjoxNjk4MDQ4MDYwNzY5LCJ0IjoxLCJ1Ijo0LCJuIjpbIjEiLCIyIl0sImR0IjpbIioiXSwiY3AiOlsiKiJdfX0.r7hVtpPKQ_q9upmKnh0JawUfEN6hDh_V29cp2-cf3dU'"
+       "'eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlswXSwiZSI6MTY5ODE3OTM5MTc4OSwidCI6MSwidSI6MiwibiI6WyIqIl0sImR0IjpbIioiXSwiY3AiOlsiKiJdfX0.u1itRVcJxGPbzLAdy-4uF0cR1A3fCwSa122CXHmsDNg'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accessToken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlswXSwiZSI6MTcxMzkwMDg4NzcwMCwidCI6MCwidSI6MiwibiI6WyIqIl0sImR0IjpbIioiXSwiY3AiOlsiKiJdfX0.NhhaLy-cBP9B4NidNscH4zOvvebGwpMfC1B7DML-S5E'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "refreshToken"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nin case of access token expired\\n'"
+      ]
+     },
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,80 +92,77 @@
     "'''\n",
     "in case of access token expired\n",
     "'''\n",
-    "refreshUrl = 'http://localhost:80/auth/rest/token/refresh'\n",
-    "payload = json.dumps({\"refreshToken\": refreshToken})\n",
-    "headers = {\n",
-    "  'Content-Type': 'application/json'\n",
-    "}\n",
-    "response = requests.request(\"POST\", refreshUrl, headers=headers, data=payload)\n",
-    "accessToken = json.loads(response.text)['accessToken']\n",
-    "accessToken"
+    "# refreshUrl = 'http://localhost:80/auth/rest/token/refresh'\n",
+    "# payload = json.dumps({\"refreshToken\": refreshToken})\n",
+    "# headers = {\n",
+    "#   'Content-Type': 'application/json'\n",
+    "# }\n",
+    "# response = requests.request(\"POST\", refreshUrl, headers=headers, data=payload)\n",
+    "# accessToken = json.loads(response.text)['accessToken']\n",
+    "# accessToken"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 2, 'name': 'CP2', 'description': 'string'},\n",
-       " {'id': 1,\n",
+       "[{'id': 1,\n",
        "  'name': 'Default Icomponent',\n",
        "  'description': 'Default DeviceHive icomponent'},\n",
-       " {'id': 3, 'name': 'CP3', 'description': 'string'}]"
+       " {'id': 2, 'name': 'Room', 'description': 'Room icomponent'},\n",
+       " {'id': 3, 'name': 'Wall', 'description': 'Wall icomponent'},\n",
+       " {'id': 4, 'name': 'Floor', 'description': 'Floor icomponent'},\n",
+       " {'id': 5, 'name': 'Ceiling', 'description': 'Ceiling icomponent'},\n",
+       " {'id': 6, 'name': 'Door', 'description': 'Door icomponent'},\n",
+       " {'id': 7, 'name': 'HVAC', 'description': 'HVAC icomponent'}]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "payload = {}\n",
-    "\n",
     "headers = {'Authorization': 'Bearer' + accessToken }\n",
     "\n",
     "ListComponents = requests.request(\"GET\", url='http://localhost:80/api/rest/icomponent/', headers=headers, data=payload)\n",
     "ListDevices = requests.request(\"GET\", url='http://localhost/api/rest/device', headers=headers, data=payload)\n",
     "CurrentUser = requests.request(\"GET\", url='http://localhost:80/api/rest/user/current', headers=headers, data=payload)\n",
-    "ListDeviceTypes = requests.request(\"GET\", url='http://localhost:80/api/rest/devicetype', headers=headers, data=payload)\n",
+    "ListIexperiments = requests.request(\"GET\", url='http://localhost:80/api/rest/iexperiment', headers=headers, data=payload)\n",
+    "\n",
     "json.loads(ListComponents.text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 'e50d6085-2aba-48e9-b1c3-73c673e414be',\n",
-       "  'name': 'Sample Device',\n",
+       "[{'id': 'example-device-1',\n",
+       "  'name': 'example-device-1',\n",
        "  'data': None,\n",
        "  'networkId': 1,\n",
-       "  'deviceTypeId': 1,\n",
+       "  'iexperimentId': 1,\n",
        "  'icomponentId': 1,\n",
        "  'isBlocked': False},\n",
-       " {'id': 'FnmYwn8ruw5BqrTZki14k0Sx2vxrwwQPNNSx',\n",
-       "  'name': 'DEV2',\n",
-       "  'data': {'jsonString': 'string'},\n",
-       "  'networkId': 1,\n",
-       "  'deviceTypeId': 2,\n",
-       "  'icomponentId': 2,\n",
-       "  'isBlocked': False},\n",
-       " {'id': 'dHsgbYbjyoWOyy9LUbpEtnxss4AHw0YH2DtG',\n",
-       "  'name': 'DEV3',\n",
+       " {'id': 'e50d6085-2aba-48e9-b1c3-73c673e414be',\n",
+       "  'name': 'e50d6085-2aba-48e9-b1c3-73c673e414be',\n",
        "  'data': None,\n",
-       "  'networkId': 2,\n",
-       "  'deviceTypeId': 2,\n",
+       "  'networkId': 1,\n",
+       "  'iexperimentId': 1,\n",
        "  'icomponentId': 1,\n",
        "  'isBlocked': False}]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -144,20 +181,19 @@
       "text/plain": [
        "{'networks': [{'id': 1,\n",
        "   'name': 'Sample Network',\n",
-       "   'description': 'A DeviceHive Sample Network'},\n",
-       "  {'id': 2, 'name': 'NET2', 'description': None}],\n",
-       " 'id': 4,\n",
+       "   'description': 'A DeviceHive Sample Network'}],\n",
+       " 'id': 2,\n",
        " 'login': 'dhuser01',\n",
-       " 'role': 1,\n",
+       " 'role': 0,\n",
        " 'status': 0,\n",
-       " 'lastLogin': '2023-10-23T07:20:12.761',\n",
+       " 'lastLogin': '2023-10-24T19:34:47.681',\n",
        " 'data': None,\n",
-       " 'introReviewed': False,\n",
-       " 'allDeviceTypesAvailable': True,\n",
+       " 'introReviewed': True,\n",
+       " 'allIexperimentsAvailable': True,\n",
        " 'allIcomponentsAvailable': True}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,60 +204,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 3,\n",
-       "  'name': 'Lightning',\n",
-       "  'description': 'Devices to turn smart lights on and off, change the brightness, specify colors'},\n",
-       " {'id': 4,\n",
-       "  'name': 'Door Locks',\n",
-       "  'description': 'Check the state of your door locks and manipulate if needed'},\n",
-       " {'id': 5,\n",
-       "  'name': 'Thermostats',\n",
-       "  'description': 'Devices to control thermostat settings and to report current temperatures'},\n",
-       " {'id': 6,\n",
-       "  'name': 'Entertainment',\n",
-       "  'description': 'Control of your smart TVs, receivers, and other entertainment devices'},\n",
-       " {'id': 7,\n",
-       "  'name': 'Cars',\n",
-       "  'description': 'Devices to develop your own smart cars'},\n",
-       " {'id': 8,\n",
-       "  'name': 'Cooking',\n",
-       "  'description': 'Cooking devices for hands-free control in your kitchen'},\n",
-       " {'id': 2,\n",
-       "  'name': 'Cameras',\n",
-       "  'description': 'Enable your smart home cameras to enable real time streaming'},\n",
-       " {'id': 1,\n",
-       "  'name': 'Default Device Type',\n",
-       "  'description': 'Default DeviceHive device type'}]"
+       "[{'id': 1,\n",
+       "  'name': 'Default Iexperiment',\n",
+       "  'description': 'Default DeviceHive iexperiment'},\n",
+       " {'id': 2, 'name': 'Iclimabuilt', 'description': 'Experiment of Iclimabuilt'},\n",
+       " {'id': 3, 'name': 'Powerskin', 'description': 'Experiment of Powerskin'}]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "json.loads(ListDeviceTypes.text)"
+    "json.loads(ListIexperiments.text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -240,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
