--- a/utilities-py/refreshPluginToken.ipynb
+++ b/utilities-py/refreshPluginToken.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOm51bGwsImUiOjE2OTgxODQwNzczMDksInQiOjEsInRwYyI6InBsdWdpbl90b3BpY18xNTA0Y2Q0YS1lMTM4LTQyZDQtYjVlNi0zYzgzZjZlNTUxNjEifX0.ststw73xqptpolQQbn3KptYyZOJMGC3aZJtkVD3UnTc\n"
+      "eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOm51bGwsImUiOjE2OTgyMjU0NzY1NzQsInQiOjEsInRwYyI6InBsdWdpbl90b3BpY19lNzk5ODM2OS0wNDc3LTRhMzYtOGQ4ZC1lZGZkNjQ0YmM4MjMifX0.-46QGSTxl5AkDtqAL2uHv2gJu57WRMHMNmX18HEILT8\n"
      ]
     }
    ],
@@ -20,8 +20,8 @@
     "url = \"http://localhost:80/auth/rest/token\"\n",
     "\n",
     "payload = json.dumps({\n",
-    "  \"login\": \"dhuser01\",\n",
-    "  \"password\": \"dhuser01\"\n",
+    "  \"login\": \"dhadmin\",\n",
+    "  \"password\": \"dhadmin_#911\"\n",
     "})\n",
     "headers = {\n",
     "  'Content-Type': 'application/json'\n",
@@ -34,7 +34,7 @@
     "\n",
     "url = \"http://localhost:80/auth/rest/token/plugin/create\"\n",
     "\n",
-    "pluginTopic = \"plugin_topic_1504cd4a-e138-42d4-b5e6-3c83f6e55161\"\n",
+    "pluginTopic = \"plugin_topic_e7998369-0477-4a36-8d8d-edfd644bc823\"\n",
     "payload = {\"tpc\":pluginTopic}\n",
     "\n",
     "headers = {\n",
@@ -49,24 +49,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'id': 1,\n",
-       "  'name': 'plug01',\n",
-       "  'description': 'plug01',\n",
-       "  'topicName': 'plugin_topic_1504cd4a-e138-42d4-b5e6-3c83f6e55161',\n",
+       "  'name': 'plugin01',\n",
+       "  'description': 'pg01',\n",
+       "  'topicName': 'plugin_topic_e7998369-0477-4a36-8d8d-edfd644bc823',\n",
        "  'filter': 'command,command_update,notification/*/*/*/*/*',\n",
-       "  'status': 'ACTIVE',\n",
-       "  'subscriptionId': 1698170528805000,\n",
-       "  'userId': 2,\n",
-       "  'parameters': {'jsonString': 'string'}}]"
+       "  'status': 'INACTIVE',\n",
+       "  'subscriptionId': None,\n",
+       "  'userId': 1,\n",
+       "  'parameters': {}}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
