--- a/utilities-py/refreshTokenbyLoginPw.ipynb
+++ b/utilities-py/refreshTokenbyLoginPw.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlswXSwiZSI6MTY5ODE4MzcxODU4MSwidCI6MSwidSI6MiwibiI6WyIqIl0sImR0IjpbIioiXSwiY3AiOlsiKiJdfX0.gg0KdGfXlGYUVgxLNvhwDO8TM4xU1egWvZvAOyo0WTs\n"
+      "eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlswXSwiZSI6MTY5ODIyNjk3NDM4MCwidCI6MSwidSI6MSwibiI6WyIqIl0sImR0IjpbIioiXSwiY3AiOlsiKiJdfX0.bmfm8JORppxVg9qWjOKqv0VoRtVMR1oG0KHLHAVSn98\n"
      ]
     }
    ],
@@ -27,8 +27,8 @@
     "url = \"http://localhost:80/auth/rest/token\"\n",
     "\n",
     "payload = json.dumps({\n",
-    "  \"login\": \"dhuser01\",\n",
-    "  \"password\": \"dhuser01\"\n",
+    "  \"login\": \"dhadmin\",\n",
+    "  \"password\": \"dhadmin_#911\"\n",
     "})\n",
     "headers = {\n",
     "  'Content-Type': 'application/json'\n",
