--- a/utilities-py/DeviceHiveRESTAPI.ipynb
+++ b/utilities-py/DeviceHiveRESTAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,22 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlswXSwiZSI6MTY5ODE3OTM5MTc4OSwidCI6MSwidSI6MiwibiI6WyIqIl0sImR0IjpbIioiXSwiY3AiOlsiKiJdfX0.u1itRVcJxGPbzLAdy-4uF0cR1A3fCwSa122CXHmsDNg'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "accessToken"
+    "accessToken = 'eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlswXSwiZSI6MTY5ODMwNTIzNDMxMCwidCI6MSwidSI6MSwibiI6WyIqIl0sImR0IjpbIioiXSwiY3AiOlsiKiJdfX0.ay--bV6-Xsl3aLDYj0SZB-5l7lT6BmuR8EhpSMd97E8'"
    ]
   },
   {
@@ -104,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +110,7 @@
        " {'id': 7, 'name': 'HVAC', 'description': 'HVAC icomponent'}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,29 +129,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 'example-device-1',\n",
-       "  'name': 'example-device-1',\n",
-       "  'data': None,\n",
-       "  'networkId': 1,\n",
-       "  'iexperimentId': 1,\n",
-       "  'icomponentId': 1,\n",
-       "  'isBlocked': False},\n",
-       " {'id': 'e50d6085-2aba-48e9-b1c3-73c673e414be',\n",
-       "  'name': 'e50d6085-2aba-48e9-b1c3-73c673e414be',\n",
-       "  'data': None,\n",
-       "  'networkId': 1,\n",
-       "  'iexperimentId': 1,\n",
-       "  'icomponentId': 1,\n",
-       "  'isBlocked': False}]"
+       "[]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
