--- a/utilities-py/pluginConnect.ipynb
+++ b/utilities-py/pluginConnect.ipynb
@@ -21,8 +21,8 @@
     "\n",
     "\n",
     "url = 'ws://localhost/plugin/proxy'\n",
-    "topic_name = 'plugin_topic_e7998369-0477-4a36-8d8d-edfd644bc823'\n",
-    "plugin_access_token = 'eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOm51bGwsImUiOjE2OTgyMjM1MzE4NTYsInQiOjEsInRwYyI6InBsdWdpbl90b3BpY19lNzk5ODM2OS0wNDc3LTRhMzYtOGQ4ZC1lZGZkNjQ0YmM4MjMifX0.DwAvNwbkfYNcoX3A42QtciXuwUWzVTEimw2_SRCuG_4'\n",
+    "topic_name = 'plugin_topic_1ef1637d-5878-430a-a6ed-7bb96ee9374d'\n",
+    "plugin_access_token = 'eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlsxNl0sImUiOjE2OTgyNTgxODI0NDcsInQiOjEsInRwYyI6InBsdWdpbl90b3BpY180ZTNjMDNiNi1kNDI0LTRkYjctYTUxOS04ODE1MDVhMWI1MGYifX0.RnUDCsej0eaNzSoMjfDQ_d18haZHVsxBI0Gceiifh_k'\n",
     "\n",
     "\n",
     "class SimpleHandler(Handler):\n",
@@ -42,7 +42,7 @@
     "        print(command.command)\n",
     "\n",
     "    def handle_notification(self, notification):\n",
-    "        print(notification.notification)\n",
+    "        print(notification.parameters)\n",
     "\n",
     "def main():\n",
     "    p = Plugin(SimpleHandler)\n",
@@ -52,13 +52,6 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
