--- a/utilities-py/refreshTokenbyLoginPw.ipynb
+++ b/utilities-py/refreshTokenbyLoginPw.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlswXSwiZSI6MTY5ODIyNjk3NDM4MCwidCI6MSwidSI6MSwibiI6WyIqIl0sImR0IjpbIioiXSwiY3AiOlsiKiJdfX0.bmfm8JORppxVg9qWjOKqv0VoRtVMR1oG0KHLHAVSn98\n"
+      "eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlswXSwiZSI6MTY5ODU5NTMzNDA0NCwidCI6MSwidSI6MSwibiI6WyIqIl0sImR0IjpbIioiXSwiY3AiOlsiKiJdfX0.pg494fJI27p_p9XHoEptT3oPfEM8RcIKHwuscdIiICE\n"
      ]
     }
    ],
@@ -29,6 +29,8 @@
     "payload = json.dumps({\n",
     "  \"login\": \"dhadmin\",\n",
     "  \"password\": \"dhadmin_#911\"\n",
+    "  # \"login\": \"dhuser01\",\n",
+    "  # \"password\": \"dhuser01\"\n",
     "})\n",
     "headers = {\n",
     "  'Content-Type': 'application/json'\n",
