--- a/utilities-py/pluginCreator.ipynb
+++ b/utilities-py/pluginCreator.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOm51bGwsImUiOjE2OTgyNjkwOTY3MTIsInQiOjEsInRwYyI6InBsdWdpbl90b3BpY182MGVjMDc4NC0xNDFhLTRiODYtYWRiYi05ZGNkNDMxZGM4ODAifX0.NKUbKML_nTmCmsMUPIC42ZZ2jrXDlngiExcCR3uQb08\n"
+      "success\n",
+      "response: {\"accessToken\":\"eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlsxNl0sImUiOjE2OTgzMjY0MzU3NzgsInQiOjEsInRwYyI6InBsdWdpbl90b3BpY185OTQ0MTg1Mi1jNjBlLTRjYzItODgzZi1mMTJlZTA1N2ExMzUifX0.bGD1rmvlRbtN3rKCvhTjPEsSxPyv52B7uYljGrpgqXA\",\"refreshToken\":\"eyJhbGciOiJIUzI1NiJ9.eyJwYXlsb2FkIjp7ImEiOlsxNl0sImUiOjE3MTQwNDk0MzU3NzgsInQiOjAsInRwYyI6InBsdWdpbl90b3BpY185OTQ0MTg1Mi1jNjBlLTRjYzItODgzZi1mMTJlZTA1N2ExMzUifX0.u1MacqiYN4mwGCZJwHio8SHzac-U1S04a_QM9Oa1CJI\",\"proxyEndpoint\":\"ws://localhost/plugin/proxy\",\"topicName\":\"plugin_topic_99441852-c60e-4cc2-883f-f12ee057a135\"}\n"
      ]
     }
    ],
    "source": [
     "import requests\n",
     "import json\n",
-    "\n",
     "url = \"http://localhost:80/auth/rest/token\"\n",
     "\n",
     "payload = json.dumps({\n",
@@ -30,43 +30,50 @@
     "response = requests.request(\"POST\", url, headers=headers, data=payload)\n",
     "\n",
     "accessToken = json.loads(response.text)['accessToken']\n",
-    "refreshToken = json.loads(response.text)['refreshToken']\n",
     "\n",
-    "url = \"http://localhost:80/auth/rest/token/plugin/create\"\n",
-    "\n",
-    "pluginTopic = \"plugin_topic_60ec0784-141a-4b86-adbb-9dcd431dc880\"\n",
-    "payload = {\"tpc\":pluginTopic}\n",
-    "\n",
+    "# networkIds=1&networkIds=2\n",
+    "url = \"http://localhost:80/plugin/rest/plugin?networkIds=1%2C2&returnCommands=true&returnUpdatedCommands=true&returnNotifications=true\"\n",
     "headers = {\n",
-    "  'Content-Type': 'application/json',\n",
-    "  'Authorization': 'Bearer ' + accessToken\n",
+    "    \"Content-Type\": \"application/json\",\n",
+    "    \"Accept\": \"application/json\",\n",
+    "    \"Authorization\": \"Bearer \" + accessToken\n",
     "}\n",
     "\n",
-    "response = requests.request(\"POST\", url, headers=headers, data=json.dumps(payload))\n",
+    "data = {\n",
+    "    \"name\": \"pluginWithNet1Net2\",\n",
+    "    \"description\": \"WithNet1Net2\"\n",
+    "}\n",
     "\n",
-    "print(json.loads(response.text)['accessToken'])\n"
+    "response = requests.post(url, headers=headers, json=data)\n",
+    "\n",
+    "if response.status_code == 201:\n",
+    "    print(\"success\")\n",
+    "    print(\"response:\", response.text)\n",
+    "else:\n",
+    "    print(\"faild\", response.status_code)\n",
+    "    print(\"response:\", response.text)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 7,\n",
-       "  'name': 'plugin_with_Networkids_1_2',\n",
-       "  'description': 'plugin created at 2023_10_29_16_52',\n",
-       "  'topicName': 'plugin_topic_2f08f84f-8947-4507-bfa6-2846984faac5',\n",
-       "  'filter': 'command,command_update,notification/2/*/*/*/*',\n",
+       "[{'id': 12,\n",
+       "  'name': 'pluginWithNet1Net2',\n",
+       "  'description': 'WithNet1Net2',\n",
+       "  'topicName': 'plugin_topic_99441852-c60e-4cc2-883f-f12ee057a135',\n",
+       "  'filter': 'command,command_update,notification/1,2/*/*/*/*',\n",
        "  'status': 'ACTIVE',\n",
-       "  'subscriptionId': 1698610279688010,\n",
+       "  'subscriptionId': 1698332131132005,\n",
        "  'userId': 1,\n",
        "  'parameters': None}]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,9 +82,9 @@
     "'''\n",
     "Gets list of plugins.\n",
     "'''\n",
+    "\n",
     "import requests\n",
     "import json\n",
-    "\n",
     "url = \"http://localhost:80/auth/rest/token\"\n",
     "\n",
     "payload = json.dumps({\n",
@@ -91,7 +98,6 @@
     "response = requests.request(\"POST\", url, headers=headers, data=payload)\n",
     "\n",
     "accessToken = json.loads(response.text)['accessToken']\n",
-    "refreshToken = json.loads(response.text)['refreshToken']\n",
     "\n",
     "url = \"http://localhost:80/plugin/rest/plugin\"\n",
     "\n",
@@ -102,7 +108,7 @@
     "\n",
     "response = requests.request(\"GET\", url, headers=headers, data=payload)\n",
     "\n",
-    "json.loads(response.text)\n"
+    "json.loads(response.text)"
    ]
   },
   {
