plugin initilizer and updater

--- a/utilities-py/refreshPluginToken.ipynb
+++ b/utilities-py/refreshPluginToken.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,14 +59,14 @@
        "  'name': 'plugin_with_Networkids_1_2',\n",
        "  'description': 'plugin created at 2023_10_29_16_52',\n",
        "  'topicName': 'plugin_topic_2f08f84f-8947-4507-bfa6-2846984faac5',\n",
-       "  'filter': 'command,command_update,notification/2/*/*/*/*',\n",
+       "  'filter': 'command,command_update,notification/1,2,3/*/*/*/*',\n",
        "  'status': 'ACTIVE',\n",
-       "  'subscriptionId': 1698610279688010,\n",
+       "  'subscriptionId': 1698615710877015,\n",
        "  'userId': 1,\n",
        "  'parameters': None}]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,6 +103,26 @@
     "response = requests.request(\"GET\", url, headers=headers, data=payload)\n",
     "\n",
     "json.loads(response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Response [200]>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
    ]
   },
   {
