--- a/utilities-py/pluginCreator.ipynb
+++ b/utilities-py/pluginCreator.ipynb
@@ -56,24 +56,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'id': 12,\n",
-       "  'name': 'pluginWithNet1Net2',\n",
-       "  'description': 'WithNet1Net2',\n",
-       "  'topicName': 'plugin_topic_99441852-c60e-4cc2-883f-f12ee057a135',\n",
-       "  'filter': 'command,command_update,notification/1,2/*/*/*/*',\n",
+       "[{'id': 7,\n",
+       "  'name': 'PLUGIN_TESTER',\n",
+       "  'description': 'I am a plugin tester',\n",
+       "  'topicName': 'plugin_topic_2f08f84f-8947-4507-bfa6-2846984faac5',\n",
+       "  'filter': 'command,command_update,notification/1,2,4,5/*/*/*/*',\n",
        "  'status': 'ACTIVE',\n",
-       "  'subscriptionId': 1698332131132005,\n",
+       "  'subscriptionId': 1698649772220004,\n",
+       "  'userId': 1,\n",
+       "  'parameters': None},\n",
+       " {'id': 14,\n",
+       "  'name': 'PLUGIN_INFLUXDB',\n",
+       "  'description': 'Description of PLUGIN_INFLUXDB',\n",
+       "  'topicName': 'plugin_topic_e11a6723-6fac-4f81-b683-8b8693cc46a8',\n",
+       "  'filter': 'command,command_update,notification/1,2,4,5/*/*/*/*',\n",
+       "  'status': 'ACTIVE',\n",
+       "  'subscriptionId': 1698651193046008,\n",
+       "  'userId': 1,\n",
+       "  'parameters': None},\n",
+       " {'id': 15,\n",
+       "  'name': 'PLUGIN_UPDATE_LISTENER',\n",
+       "  'description': 'Dscription of PLUGIN_UPDATE_LISTENER',\n",
+       "  'topicName': 'plugin_topic_6dbcf62d-afdf-47bd-960f-34a7f2db03cd',\n",
+       "  'filter': 'command/*/*/*/*/*',\n",
+       "  'status': 'CREATED',\n",
+       "  'subscriptionId': None,\n",
        "  'userId': 1,\n",
        "  'parameters': None}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
