--- a/catalog/catalog.ipynb
+++ b/catalog/catalog.ipynb
@@ -302,18 +302,14 @@
     }
    ],
    "source": [
-    "# 要查找的 linked user\n",
+    "#Given target user list all linked use cases\n",
     "target_user = \"dhadmin\"\n",
-    "\n",
-    "# 用于存储匹配的 useCases 的列表\n",
     "matching_use_cases = []\n",
     "\n",
-    "# 遍历 useCases 并查找匹配的用户\n",
     "for use_case, details in useCase_cat[\"useCases\"].items():\n",
     "    if target_user in details[\"linked users\"]:\n",
     "        matching_use_cases.append(use_case)\n",
     "\n",
-    "# 输出匹配的 useCases\n",
     "if matching_use_cases:\n",
     "    print(f\"The user '{target_user}' is linked to the following useCases: {', '.join(matching_use_cases)}\")\n",
     "else:\n",
@@ -334,21 +330,15 @@
     }
    ],
    "source": [
-    "# 要查找的 linked user\n",
+    "#Give target user list all linked sensors\n",
     "target_user = \"dhuser01\"\n",
-    "\n",
-    "# 用于存储匹配的 linked sensors 的列表\n",
     "matching_sensors = []\n",
     "\n",
-    "# 遍历 useCases 并查找匹配的用户\n",
     "for use_case, details in useCase_cat[\"useCases\"].items():\n",
     "    if target_user in details[\"linked users\"]:\n",
     "        matching_sensors.extend(details[\"linked sensors\"])\n",
     "\n",
-    "# 去除重复的传感器\n",
     "matching_sensors = list(set(matching_sensors))\n",
-    "\n",
-    "# 输出匹配的 linked sensors\n",
     "if matching_sensors:\n",
     "    print(f\"The sensors linked to user '{target_user}' are: {', '.join(matching_sensors)}\")\n",
     "else:\n",
